Implementation multiple file processes
