# backend/docs/swagger.yaml
@@ -1,5 +1,11 @@
 basePath: /
 definitions:
+  records.LoadFundsResponse:
+    properties:
+      process_id:
+        example: c01d7cf6-ec3f-47f0-9556-a5d6e9009a43
+        type: string
+    type: object
   records.RecordAccount:
     properties:
       customer_id:
@@ -39,6 +45,9 @@ definitions:
       message:
         example: Message error!
         type: string
+      process_id:
+        example: c01d7cf6-ec3f-47f0-9556-a5d6e9009a43
+        type: string
       time:
         example: "2000-01-01T00:00:00Z"
         type: string
@@ -69,12 +78,12 @@ paths:
         required: true
         type: file
       produces:
-      - text/plain
+      - application/json
       responses:
         "200":
-          description: ok
+          description: OK
           schema:
-            type: string
+            $ref: '#/definitions/records.LoadFundsResponse'
       summary: Processes Funds from a specific file
       tags:
       - Records
@@ -91,12 +100,12 @@ paths:
         schema:
           $ref: '#/definitions/records.RecordAccountList'
       produces:
-      - text/plain
+      - application/json
       responses:
         "200":
-          description: ok
+          description: OK
           schema:
-            type: string
+            $ref: '#/definitions/records.LoadFundsResponse'
       summary: Processes Funds from body json
       tags:
       - Records
@@ -112,25 +121,31 @@ paths:
         required: true
         type: file
       produces:
-      - text/plain
+      - application/json
       responses:
         "200":
-          description: ok
+          description: OK
           schema:
-            type: string
+            $ref: '#/definitions/records.LoadFundsResponse'
       summary: Processes Funds from a specific file and write result on MongoDB
       tags:
       - Records
   /api/funds/download:
     get:
       description: Downloads the last result of loading the file of Load Funds of customers
+      parameters:
+      - description: Process ID
+        in: query
+        name: uuid_file
+        required: true
+        type: string
       produces:
       - text/plain
       responses:
         "200":
-          description: ok
+          description: A txt file
           schema:
-            type: string
+            type: file
       summary: Downloads last result of load funds file
       tags:
       - Records
@@ -138,6 +153,11 @@ paths:
     get:
       description: Lists the last result of load funds file that was written on MongoDB
       parameters:
+      - description: Process ID
+        in: query
+        name: process_id
+        required: true
+        type: string
       - description: Transaction ID
         in: query
         name: id
